--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,30 @@
 @tailwind components;
 /* purgecss end ignore */
 @tailwind utilities;
+
+article h2 {
+    font-size: 2em;
+    font-weight: bold;
+    margin-bottom: 0.6em;
+}
+
+article h3 {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 0.4em;
+}
+
+article p {
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 1.6em;
+}
+
+article code {
+    background-color: rgba(242, 242, 242, 1);
+}
+
+article img {
+    margin: 0 auto;
+    width: 80%;
+}
